Agrego nuevo map

--- a/assets/maps/maps.yaml
+++ b/assets/maps/maps.yaml
@@ -1,13 +1,15 @@
 map_list:
   - name: "Grass Map"
-    id: 1
+    id: 4
   - name: "Electric Map"
     id: 2
   - name: "Atus Map"
     id: 3
+  - name: "Custom 1"
+    id: 1
 
 maps:
-    1:
+    4:
       texture: "assets/maps/grass_map"
       yaml: "assets/maps/grass_map"
     2:
@@ -16,3 +18,6 @@ maps:
     3:
       texture: "assets/maps/custom_map"
       yaml: "assets/maps/atus_map"
+    1:
+      texture: "assets/maps/custom_map"
+      yaml: "assets/maps/custom_1"
