--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,17 @@ if (EVENTS)
             ${SOURCES_SERVER_GAME_LOGIC}
             ${HEADERS_CLIENT}
             ${HEADERS_SERVER}
-            ${HEADERS_COMMON}
+            ${HEADERS_COMMON} 
+            ${SOURCES_GAME_ENGINE} 
+            ${HEADERS_GAME_ENGINE} 
+    )
+    target_link_libraries(client_test_one
+            SDL2main
+            SDL2
+            SDL2_image
+            SDL2_ttf
+            SDL2_mixer
+            yaml-cpp
     )
 
     add_executable(server_test_one tests/events/client_to_server/server_main.cpp
@@ -120,7 +130,17 @@ if (EVENTS)
             ${SOURCES_SERVER_GAME_LOGIC}
             ${HEADERS_CLIENT}
             ${HEADERS_SERVER}
-            ${HEADERS_COMMON}
+            ${HEADERS_COMMON} 
+            ${SOURCES_GAME_ENGINE} 
+            ${HEADERS_GAME_ENGINE} 
+    )
+    target_link_libraries(server_test_one
+            SDL2main
+            SDL2
+            SDL2_image
+            SDL2_ttf
+            SDL2_mixer
+            yaml-cpp
     )
 
     add_executable(client_test_two tests/events/server_to_client/client_main.cpp
@@ -130,9 +150,20 @@ if (EVENTS)
             ${SOURCES_SERVER_GAME_LOGIC}
             ${HEADERS_CLIENT}
             ${HEADERS_SERVER}
-            ${HEADERS_COMMON}
+            ${HEADERS_COMMON} 
+            ${SOURCES_GAME_ENGINE} 
+            ${HEADERS_GAME_ENGINE} 
+    )
+    target_link_libraries(client_test_two
+            SDL2main
+            SDL2
+            SDL2_image
+            SDL2_ttf
+            SDL2_mixer
+            yaml-cpp
     )
 
+    
     add_executable(server_test_two tests/events/server_to_client/server_main.cpp
             ${SOURCES_COMMON}
             ${SOURCES_CLIENT_PROTOCOL}
@@ -140,8 +171,19 @@ if (EVENTS)
             ${SOURCES_SERVER_GAME_LOGIC}
             ${HEADERS_CLIENT}
             ${HEADERS_SERVER}
-            ${HEADERS_COMMON}
+            ${HEADERS_COMMON} 
+            ${SOURCES_GAME_ENGINE} 
+            ${HEADERS_GAME_ENGINE} 
     )
+    target_link_libraries(server_test_two
+            SDL2main
+            SDL2
+            SDL2_image
+            SDL2_ttf
+            SDL2_mixer
+            yaml-cpp
+    )
+
 endif()
 
 
