--- a/assets/characters/players/lori.yaml
+++ b/assets/characters/players/lori.yaml
@@ -6,7 +6,7 @@ idle_right:
     flipped: false
     frames: 8
     fps: 8
-    x: 12
+    x: 7
     y: 12
     w: 48
     h: 53
@@ -26,37 +26,37 @@ moving_right:
     flipped: false
     frames: 8
     fps: 8
-    x: 23
-    y: 244
+    x: 18
+    y: 240
     w: 48
-    h: 49
+    h: 53
     off_x: -9
     off_y: -4
 moving_left:
     flipped: true
     frames: 8
     fps: 8
-    x: 23
-    y: 244
+    x: 18
+    y: 240
     w: 48
-    h: 49
+    h: 53
     off_x: -9
     off_y: -4
-spriting_right:
+sprinting_right:
     flipped: false
     frames: 8
     fps: 8
-    x: 21
+    x: 16
     y: 310
     w: 65
     h: 45
     off_x: -17
     off_y: -3
-spriting_left:
+sprinting_left:
     flipped: true
     frames: 8
     fps: 8
-    x: 21
+    x: 16
     y: 310
     w: 65
     h: 45
@@ -66,7 +66,7 @@ jumping_right:
     flipped: false
     frames: 9
     fps: 8
-    x: 29
+    x: 24
     y: 466
     w: 48
     h: 55
@@ -76,7 +76,7 @@ jumping_left:
     flipped: true
     frames: 9
     fps: 8
-    x: 29
+    x: 24
     y: 466
     w: 48
     h: 55
@@ -134,24 +134,34 @@ special_left:
     off_y: -3
 damaged:
     flipped: false
-    frames: 3
+    frames: 11
     fps: 8
-    x: 33
-    y: 381
-    w: 39
-    h: 53
+    x: 9
+    y: 687
+    w: 59
+    h: 61
     off_x: -5
-    off_y: -3
+    off_y: -5
+dying:
+    flipped: false
+    frames: 20
+    fps: 8
+    x: 35
+    y: 773
+    w: 179
+    h: 86
+    off_x: 0
+    off_y: -9
 dead:
     flipped: false
     frames: 3
     fps: 8
-    x: 33
-    y: 381
-    w: 39
-    h: 53
-    off_x: -5
-    off_y: -3
+    x: 3794
+    y: 773
+    w: 179
+    h: 86
+    off_x: 0
+    off_y: -9
 intoxicated_idle:
     flipped: false
     frames: 12
