--- a/assets/characters/players/spaz.yaml
+++ b/assets/characters/players/spaz.yaml
@@ -42,7 +42,7 @@ moving_left:
     h: 47
     off_x: -9
     off_y: -3
-spriting_right:
+sprinting_right:
     flipped: false
     frames: 4
     fps: 8
@@ -52,7 +52,7 @@ spriting_right:
     h: 40
     off_x: -11
     off_y: 0
-spriting_left:
+sprinting_left:
     flipped: true
     frames: 4
     fps: 8
@@ -134,24 +134,34 @@ special_left:
     off_y: -2
 damaged:
     flipped: false
-    frames: 3
+    frames: 11
     fps: 8
-    x: 6
-    y: 495
-    w: 54
-    h: 52
-    off_x: -11
-    off_y: -12
+    x: 16
+    y: 697
+    w: 67
+    h: 76
+    off_x: 0
+    off_y: -16
+dying:
+    flipped: false
+    frames: 20
+    fps: 8
+    x: 87
+    y: 789
+    w: 119
+    h: 86
+    off_x: 0
+    off_y: -20
 dead:
     flipped: false
     frames: 3
     fps: 8
-    x: 6
-    y: 495
-    w: 54
-    h: 52
-    off_x: -11
-    off_y: -12
+    x: 2348
+    y: 789
+    w: 119
+    h: 86
+    off_x: 0
+    off_y: -20
 intoxicated_idle:
     flipped: false
     frames: 8
