Conecto Config a client y desharcodeo viewport size

--- a/assets/config.yaml
+++ b/assets/config.yaml
@@ -3,40 +3,44 @@
 # max_matches should be setted also in common_dto.h, in MatchInfoDTO struct
 # max players should be setted also in common_dto.h, in GameStateDTO struct
 
+# Speeds should be < 30 to avoid collision bugs like warping
+
+# Note: 60 game loops is 1 second
+
 match:
-  max_players: 8
-  max_matches_to_create: 30000
-  kill_points_enemy: 5
-  kill_points_player: 15
-  coin_points: 10
-  match_duration: 300
+    max_players: 8 # > 1
+    max_matches_to_create: 30000 # do not overflow uint16
+    kill_points_enemy: 5
+    kill_points_player: 15
+    coin_points: 10
+    match_duration: 300 # >= 10
 
 player:
-  health: 100
-  speed_x: 14
-  sprint_speed: 20
-  jump_force: 25
-  falling_speed: 10
-  respawn_time: 600 # in loops
-  invulnerability_time: 600 # in loops
-  intoxication_time: 450 # in loops
-  is_sprint_allowed: 1
+    health: 100 # >= 10
+    speed_x: 14
+    sprint_speed: 20
+    jump_force: 25
+    falling_speed: 10
+    respawn_time: 600 # unit is in game loops
+    invulnerability_time: 600 # unit is in game loops
+    intoxication_time: 450 # unit is in game loops
+    is_sprint_allowed: 1
 
 enemy:
-  health: 100
-  damage: 25
-  speed: 5
-  falling_speed: 10
-  respawn_time: 200 # in loops
-  movement_range: 60
+    health: 100 # >= 10
+    damage: 25
+    speed: 5
+    falling_speed: 10
+    respawn_time: 200 # unit is in game loops
+    movement_range: 60
 
-map_editor:
-  map_width: 1280
-  map_height: 640
+map_editor: # Values should be multiples of 32
+    map_width: 1280
+    map_height: 1024
 
 bullet:
-  base_damage: 20
-  base_speed: 20
-  base_ammo: 5
-  base_max_ammo: 10
-  base_shoot_rate: 20
+    base_damage: 20
+    base_speed: 20
+    base_ammo: 5
+    base_max_ammo: 10
+    base_shoot_rate: 20
