--- a/assets/maps/maps.yaml
+++ b/assets/maps/maps.yaml
@@ -1,28 +1,18 @@
 map_list:
-  - name: "Hidden Castle"
-    id: 5
-  - name: "Grass Map"
-    id: 4
-  - name: "Electric Map"
-    id: 2
-  - name: "Atus Map"
-    id: 3
-  - name: "Custom 1"
-    id: 1
+    - name: "Hidden Castle"
+      id: 1
+    - name: "Electri City"
+      id: 2
+    - name: "Old Reliable"
+      id: 3
 
 maps:
-    5:
-      texture: "assets/maps/custom_map"
-      yaml: "assets/maps/hidden_castle_map"
-    4:
-      texture: "assets/maps/grass_map"
-      yaml: "assets/maps/grass_map"
-    2:
-      texture: "assets/maps/electric_map"
-      yaml: "assets/maps/electric_map"
-    3:
-      texture: "assets/maps/custom_map"
-      yaml: "assets/maps/atus_map"
     1:
-      texture: "assets/maps/custom_map"
-      yaml: "assets/maps/custom_1"
+        texture: "assets/editor/editor_assets"
+        yaml: "assets/maps/hidden_castle_map"
+    2:
+        texture: "assets/editor/editor_assets"
+        yaml: "assets/maps/electric_map"
+    3:
+        texture: "assets/editor/editor_assets"
+        yaml: "assets/maps/old_reliable_map"
